fixed alignment, added float

--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,11 +1,11 @@
-#wrapper {
-  /*margin: auto;
-  max-width: 960px;*/
+/*#wrapper {
+  margin: auto;
+  max-width: 960px;
   text-align: left;
   width: 960px;
   margin: 0 auto;
-  padding: 100px 100px 100px 100px;
-}
+  padding: 100px 100px 100px 100px
+}*/
 
 blockquote {
   border-left: 5px solid blue;
@@ -15,13 +15,13 @@ blockquote {
 
 body{
   max-width: 960px;
-  text-align: center;
+  text-align: left;
 
 }
 
 main {
   width: 80%;
-  /*float: right;*/
+  float: right;
   /*display: inline-block;*/
   vertical-align: 100px;
 }
@@ -35,7 +35,7 @@ cite {
   list-style-type: none;
   padding-left: 0px;
   width: 20%;
-  /*float: left;*/
+  float: left;
   /*display: inline-block;*/
   top: 80px;
 }
